# movie-nerd

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/skills/dddx/: SKILL.md
migrations/: env.py
migrations/versions/: 7b695b475c84_add_email_and_password_to_user.py  b99e3491f5ce_create_chat_and_chat_message_tables.py  c67381308a0b_create_user_table.py
scripts/: migration.sh  run_http_server.sh
src/movie_nerd/application/auth/: auth_service.py  errors.py
src/movie_nerd/application/use_case/: send_message.py  start_chat.py
src/movie_nerd/domain/: __init__.py  chat.py  chat_events.py  user.py
src/movie_nerd/domain/service/: __init__.py  chat_repositoy.py  user_repositoy.py
src/movie_nerd/domain/value_object/: __init__.py  email.py
src/movie_nerd/infrastructure/auth/: __init__.py  password_hasher.py  token_service.py  user_store.py
src/movie_nerd/infrastructure/bootstrap/: app.py
src/movie_nerd/infrastructure/http/: app_factory.py  server.py
src/movie_nerd/infrastructure/persistence/sql_alchemy/: __init__.py  base_repository.py  connection.py  mappers.py  models.py  orm.py  tables.py  types.py
tests/e2e/: conftest.py  test_auth.py
tests/integration/: conftest.py  test_chat_repository.py  test_user_repository.py
tests/test_double/: __init__.py  chat_repository.py
tests/unit/application/auth/: test_providers.py
tests/unit/application/use_case/: test_send_message.py  test_start_chat.py
tests/unit/infrastructure/http/: test_auth.py
(+2 files in other folders)
